@@ -16,6 +16,10 @@ Version 2.1
   * Emacs Lisp (PR#431)
   * Arduino (PR#442)
 
+- Added styles:
+
+  * Lovelace (PR#456)
+
 
 Version 2.0.3
 -------------
